--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,16 +19,23 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url(../images/banner.png);
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.8) 0%,
+      rgba(0, 0, 0, 0) 100%
+    ),
+    url(../images/firstimage.jpg);
 
   height: 600px;
   border-radius: 10px;
 }
 .welcome-container h5 {
+  color: white;
   font-size: 32px;
   margin: 0;
 }
 .welcome-container h1 {
+  color: white;
   font-size: 72px;
   font-weight: 800;
   margin-top: 16px;
