--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,6 +124,7 @@
 }
 .midnight-titels button:hover {
   color: rgb(133, 133, 133);
+  cursor: pointer;
 }
 /* new par section  */
 .new-park-container {
@@ -161,6 +162,9 @@
   background-color: #ff0000;
   color: white;
   margin-top: 48px;
+}
+.new-park-join-btn:hover {
+  cursor: pointer;
 }
 /* coming-soon */
 .coming-soon {
@@ -222,4 +226,76 @@
 .soon-item3 img {
   margin-top: 30px;
   width: 140px;
+}
+.holidays-section {
+  margin-top: 120px;
+}
+.holidays-contant {
+  padding: 0 126px;
+  text-align: center;
+}
+.holidays-contant h6 {
+  font-size: 24px;
+  font-weight: 500;
+  margin: 0;
+}
+.holidays-contant h1 {
+  font-size: 72px;
+  font-weight: 800;
+  margin: 16px 0;
+}
+.Holidays-text {
+  color: #ff0000;
+}
+.holidays-contant p {
+  font-size: 20px;
+  font-weight: 500;
+  color: #070211;
+  opacity: 60%;
+}
+.Holidays-imgs {
+  position: relative;
+  margin-top: 64px;
+  height: 662px;
+
+  background-image: url(../images/rectangle2.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+}
+.holidays-img1 {
+  width: 660px;
+  position: absolute;
+  bottom: 0;
+  left: 80px;
+}
+.holidays-img2 {
+  position: absolute;
+  top: 100px;
+  right: 80px;
+}
+.Awesome-section {
+  margin-top: 120px;
+}
+.Awesome-contant h6 {
+  font-size: 24px;
+  font-weight: 500;
+  color: #ff0000;
+  margin: 0;
+}
+.Awesome-contant h2 {
+  font-size: 48px;
+  font-weight: 800;
+  margin: 16px 0;
+}
+.Awesome-contant p {
+  font-size: 20px;
+  color: #070211;
+  opacity: 60%;
+  margin: 16px 0;
+}
+.Awesome-imgs {
+  margin-top: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
