image problem solve

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,7 +94,7 @@
       rgba(0, 0, 0, 1) 0%,
       rgba(0, 0, 0, 0) 100%
     ),
-    url(../images/vectorrr.png);
+    url(../images/vectorrrrr.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
